--- a/MegaManLofi/MegaManLofi.vcxproj.filters
+++ b/MegaManLofi/MegaManLofi.vcxproj.filters
@@ -31,9 +31,6 @@
     <Filter Include="Source Files\Render">
       <UniqueIdentifier>{72e4b4f7-3f00-40f2-bb2f-68c19aef96d4}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Header Files\Config">
-      <UniqueIdentifier>{3d844f74-be55-4dd0-b069-ece15e0fba1b}</UniqueIdentifier>
-    </Filter>
     <Filter Include="Header Files\Wrappers">
       <UniqueIdentifier>{82f7e089-e48f-47eb-a1b9-e2f92e1392e4}</UniqueIdentifier>
     </Filter>
@@ -55,23 +52,26 @@
     <Filter Include="Source Files\GameObjects">
       <UniqueIdentifier>{8312b608-7cf1-4ec4-9f83-176d417cfdab}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Header Files\ConfigGenerators">
-      <UniqueIdentifier>{80d520c0-4325-4405-a317-2f5151f0356b}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Source Files\ConfigGenerators">
-      <UniqueIdentifier>{bada5787-7047-4f37-88c2-c3ec93573a4a}</UniqueIdentifier>
-    </Filter>
     <Filter Include="Header Files\Render\Animations">
       <UniqueIdentifier>{2199efa5-6cd1-4f52-8822-d28273f8fe00}</UniqueIdentifier>
     </Filter>
     <Filter Include="Source Files\Render\Animations">
       <UniqueIdentifier>{b32e0e61-a47e-46a8-9109-f87854115a73}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Source Files\ConfigGenerators\SubGenerators">
-      <UniqueIdentifier>{7bd07139-5eaf-4aae-82b1-1e2e6210d460}</UniqueIdentifier>
+    <Filter Include="Header Files\GameDefs">
+      <UniqueIdentifier>{3d844f74-be55-4dd0-b069-ece15e0fba1b}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Header Files\ConfigGenerators\SubGenerators">
+    <Filter Include="Header Files\GameDefGenerators">
+      <UniqueIdentifier>{80d520c0-4325-4405-a317-2f5151f0356b}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\GameDefGenerators\SubGenerators">
       <UniqueIdentifier>{e7e131bb-a77b-4171-91f9-c426b4c9e8e4}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\GameDefGenerators">
+      <UniqueIdentifier>{bada5787-7047-4f37-88c2-c3ec93573a4a}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\GameDefGenerators\SubGenerators">
+      <UniqueIdentifier>{7bd07139-5eaf-4aae-82b1-1e2e6210d460}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -187,40 +187,40 @@
       <Filter>Source Files\GameObjects</Filter>
     </ClCompile>
     <ClCompile Include="ArenaDefsGenerator.cpp">
-      <Filter>Source Files\ConfigGenerators</Filter>
+      <Filter>Source Files\GameDefGenerators</Filter>
     </ClCompile>
     <ClCompile Include="ArenaSpriteGenerator.cpp">
-      <Filter>Source Files\ConfigGenerators\SubGenerators</Filter>
+      <Filter>Source Files\GameDefGenerators\SubGenerators</Filter>
     </ClCompile>
     <ClCompile Include="ArenaTileGenerator.cpp">
-      <Filter>Source Files\ConfigGenerators\SubGenerators</Filter>
+      <Filter>Source Files\GameDefGenerators\SubGenerators</Filter>
     </ClCompile>
     <ClCompile Include="MenuSpriteGenerator.cpp">
-      <Filter>Source Files\ConfigGenerators\SubGenerators</Filter>
+      <Filter>Source Files\GameDefGenerators\SubGenerators</Filter>
     </ClCompile>
     <ClCompile Include="PlayerSpriteGenerator.cpp">
-      <Filter>Source Files\ConfigGenerators\SubGenerators</Filter>
+      <Filter>Source Files\GameDefGenerators\SubGenerators</Filter>
     </ClCompile>
     <ClCompile Include="TitleSpriteGenerator.cpp">
-      <Filter>Source Files\ConfigGenerators\SubGenerators</Filter>
+      <Filter>Source Files\GameDefGenerators\SubGenerators</Filter>
     </ClCompile>
     <ClCompile Include="PlayerDefsGenerator.cpp">
-      <Filter>Source Files\ConfigGenerators</Filter>
+      <Filter>Source Files\GameDefGenerators</Filter>
     </ClCompile>
     <ClCompile Include="KeyboardInputDefsGenerator.cpp">
-      <Filter>Source Files\ConfigGenerators</Filter>
+      <Filter>Source Files\GameDefGenerators</Filter>
     </ClCompile>
     <ClCompile Include="PlayerPhysicsDefsGenerator.cpp">
-      <Filter>Source Files\ConfigGenerators</Filter>
+      <Filter>Source Files\GameDefGenerators</Filter>
     </ClCompile>
     <ClCompile Include="ConsoleRenderDefsGenerator.cpp">
-      <Filter>Source Files\ConfigGenerators</Filter>
+      <Filter>Source Files\GameDefGenerators</Filter>
     </ClCompile>
     <ClCompile Include="GameDefsGenerator.cpp">
-      <Filter>Source Files\ConfigGenerators</Filter>
+      <Filter>Source Files\GameDefGenerators</Filter>
     </ClCompile>
     <ClCompile Include="FrameRateDefsGenerator.cpp">
-      <Filter>Source Files\ConfigGenerators</Filter>
+      <Filter>Source Files\GameDefGenerators</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -288,13 +288,13 @@
       <Filter>Header Files\Render</Filter>
     </ClInclude>
     <ClInclude Include="GameDefs.h">
-      <Filter>Header Files\Config</Filter>
+      <Filter>Header Files\GameDefs</Filter>
     </ClInclude>
     <ClInclude Include="ConsoleRenderDefs.h">
-      <Filter>Header Files\Config</Filter>
+      <Filter>Header Files\GameDefs</Filter>
     </ClInclude>
     <ClInclude Include="KeyboardInputDefs.h">
-      <Filter>Header Files\Config</Filter>
+      <Filter>Header Files\GameDefs</Filter>
     </ClInclude>
     <ClInclude Include="DiagnosticsConsoleRenderer.h">
       <Filter>Header Files\Render</Filter>
@@ -354,13 +354,13 @@
       <Filter>Header Files\Interfaces</Filter>
     </ClInclude>
     <ClInclude Include="PlayerDefs.h">
-      <Filter>Header Files\Config</Filter>
+      <Filter>Header Files\GameDefs</Filter>
     </ClInclude>
     <ClInclude Include="IGame.h">
       <Filter>Header Files\Interfaces</Filter>
     </ClInclude>
     <ClInclude Include="ArenaDefs.h">
-      <Filter>Header Files\Config</Filter>
+      <Filter>Header Files\GameDefs</Filter>
     </ClInclude>
     <ClInclude Include="IGameInfoProvider.h">
       <Filter>Header Files\Interfaces</Filter>
@@ -432,7 +432,7 @@
       <Filter>Header Files\DataTypes</Filter>
     </ClInclude>
     <ClInclude Include="PlayerPhysicsDefs.h">
-      <Filter>Header Files\Config</Filter>
+      <Filter>Header Files\GameDefs</Filter>
     </ClInclude>
     <ClInclude Include="GameOverStateConsoleRenderer.h">
       <Filter>Header Files\Render</Filter>
@@ -504,46 +504,46 @@
       <Filter>Header Files\Interfaces</Filter>
     </ClInclude>
     <ClInclude Include="ArenaSpriteGenerator.h">
-      <Filter>Header Files\ConfigGenerators\SubGenerators</Filter>
+      <Filter>Header Files\GameDefGenerators\SubGenerators</Filter>
     </ClInclude>
     <ClInclude Include="ArenaTileGenerator.h">
-      <Filter>Header Files\ConfigGenerators\SubGenerators</Filter>
+      <Filter>Header Files\GameDefGenerators\SubGenerators</Filter>
     </ClInclude>
     <ClInclude Include="MenuSpriteGenerator.h">
-      <Filter>Header Files\ConfigGenerators\SubGenerators</Filter>
+      <Filter>Header Files\GameDefGenerators\SubGenerators</Filter>
     </ClInclude>
     <ClInclude Include="PlayerSpriteGenerator.h">
-      <Filter>Header Files\ConfigGenerators\SubGenerators</Filter>
+      <Filter>Header Files\GameDefGenerators\SubGenerators</Filter>
     </ClInclude>
     <ClInclude Include="TitleSpriteGenerator.h">
-      <Filter>Header Files\ConfigGenerators\SubGenerators</Filter>
+      <Filter>Header Files\GameDefGenerators\SubGenerators</Filter>
     </ClInclude>
     <ClInclude Include="PlayerDefsGenerator.h">
-      <Filter>Header Files\ConfigGenerators</Filter>
+      <Filter>Header Files\GameDefGenerators</Filter>
     </ClInclude>
     <ClInclude Include="ArenaDefsGenerator.h">
-      <Filter>Header Files\ConfigGenerators</Filter>
+      <Filter>Header Files\GameDefGenerators</Filter>
     </ClInclude>
     <ClInclude Include="ArenaGenerationStrings.h">
-      <Filter>Header Files\ConfigGenerators</Filter>
+      <Filter>Header Files\GameDefGenerators</Filter>
     </ClInclude>
     <ClInclude Include="KeyboardInputDefsGenerator.h">
-      <Filter>Header Files\ConfigGenerators</Filter>
+      <Filter>Header Files\GameDefGenerators</Filter>
     </ClInclude>
     <ClInclude Include="PlayerPhysicsDefsGenerator.h">
-      <Filter>Header Files\ConfigGenerators</Filter>
+      <Filter>Header Files\GameDefGenerators</Filter>
     </ClInclude>
     <ClInclude Include="ConsoleRenderDefsGenerator.h">
-      <Filter>Header Files\ConfigGenerators</Filter>
+      <Filter>Header Files\GameDefGenerators</Filter>
     </ClInclude>
     <ClInclude Include="GameDefsGenerator.h">
-      <Filter>Header Files\ConfigGenerators</Filter>
+      <Filter>Header Files\GameDefGenerators</Filter>
     </ClInclude>
     <ClInclude Include="FrameRateDefs.h">
-      <Filter>Header Files\Config</Filter>
+      <Filter>Header Files\GameDefs</Filter>
     </ClInclude>
     <ClInclude Include="FrameRateDefsGenerator.h">
-      <Filter>Header Files\ConfigGenerators</Filter>
+      <Filter>Header Files\GameDefGenerators</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
