--- a/MegaManLofiTests/MegaManLofiTests.vcxproj
+++ b/MegaManLofiTests/MegaManLofiTests.vcxproj
@@ -57,6 +57,7 @@
     <ClInclude Include="mock_Keyboard.h" />
     <ClInclude Include="mock_Menu.h" />
     <ClInclude Include="mock_MenuProvider.h" />
+    <ClInclude Include="mock_PlayerInfoProvider.h" />
     <ClInclude Include="mock_PlayerPhysics.h" />
     <ClInclude Include="mock_Player.h" />
     <ClInclude Include="mock_ScreenBuffer.h" />
