--- a/MegaManLofiTests/MegaManLofiTests.vcxproj.filters
+++ b/MegaManLofiTests/MegaManLofiTests.vcxproj.filters
@@ -158,6 +158,9 @@
     <ClInclude Include="mock_Entity.h">
       <Filter>Mocks</Filter>
     </ClInclude>
+    <ClInclude Include="mock_PlayerInfoProvider.h">
+      <Filter>Mocks</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Mocks">
